# perf_tester

./: .gitignore  CMakeLists.txt  class_reflection.h  composed_test_case.h  compute_kernels.cu  compute_kernels.h  cuda_device.h  cuda_random.cu  cuda_random.h  devices.h  launch_config.h  log.cpp  log.h  loop.cu  loop.h  macro_loop.h  main.cpp  plot_result.py  problems.h  profiler.cpp  profiler.h  reduction_sum_cpu.cpp  reduction_sum_cpu.h  runner.cpp  runner.h  serial_quick_sort.cpp  serial_quick_sort.h  struct_helper.h  tbb_quick_sort.cpp  tbb_quick_sort.h  test_case.h  type_list.h  types_helper.h  vector_add.cu  vector_add.h  vector_add_cuda.cu  vector_add_cuda.h  vector_add_omp.cpp  vector_add_omp.h  vector_add_ppl.cpp  (+1 more)
